footer spacing fixes

--- a/public/static/scss/molecules/_footer.scss
+++ b/public/static/scss/molecules/_footer.scss
@@ -4,8 +4,8 @@
 
 .footer-main {
     color: $color__text--reverse;
-    padding: $base-spacing-unit 0;
-    padding: calc-rem($base-spacing-unit) 0;
+    padding: ($base-spacing-unit*2) 0 0 0;
+    padding: calc-rem($base-spacing-unit * 2) 0 0 0;
     background-color: $color__background--black;
     border-top: 5px solid lighten($color__background--black, 10);
 }
@@ -22,30 +22,22 @@
             @include max-width(7);
         }
 
-
-        &.footer-main__item--bio {
+        &.media {
             @extend .cf;
-            @include breakpoint($breakpoint__small){
-                display: block;
-            }
+            margin-bottom: $base-spacing-unit;
+            margin-bottom: calc-rem($base-spacing-unit);
 
-            .footer-main__item--bio__content {
-                @include breakpoint($breakpoint__small){
-                    @extend .media__body;
-                }
-            }
 
-            .footer-main__item--bio__image {
-                @include breakpoint($breakpoint__small){
-                    @include width(3);
-                    float:left;
-                    margin-right: $base-spacing-unit;
-                    margin-right: calc-rem($base-spacing-unit);
-                }
+            .media__img {
+                @include width(2);
 
                 img {
                     border: 1px solid darken($color__meta, 30);
                 }
+            }
+
+            p {
+                margin-bottom: 0;
             }
         }
 
@@ -105,13 +97,15 @@
     }
 
 
-    .site-info {
+    .footer-main__item--site-info {
         @extend .cf;
-        border-top: 1px solid darken($color__text--reverse,30);
+        border-top: 1px solid lighten($color__background--black,10);
         padding-top: $base-spacing-unit;
         padding-top: calc-rem($base-spacing-unit);
-        margin-bottom: $half-spacing-unit;
-        margin-bottom: calc-rem($half-spacing-unit);
+        padding-bottom: $base-spacing-unit;
+        padding-top: calc-rem($base-spacing-unit);
+        margin-bottom:0;
+        background-color: darken($color__background--black, 5);
 
         .nav {
             margin-bottom: 0;
